[tool.poetry]
authors = ["yuksblog <kotatu.kotatu@gmail.com>"]
description = ""
name = "lightning-padim"
packages = [{include = "lightning_padim", from = "src"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
lightning = "^2.4.0"
matplotlib = "^3.9.2"
numpy = "<2"
python = "^3.11"
torch = "2.2.2"
torchvision = "0.17.2"
opencv-python = "^4.11.0.86"
albumentations = "^2.0.8"
timm = "^1.0.17"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
